addressing comments